@@ -1065,8 +1065,8 @@ ReflectInput(
 	/*
 	 * The buffer is exhausted, but the caller wants even more. We now
 	 * have to go to the underlying channel, get more bytes and then
-	 * transform them for delivery. We may not get that we want (full EOF
-	 * or temporary out of data).
+	 * transform them for delivery. We may not get what we want (full EOF
+	 * or temporarily out of data).
 	 */
 
 	/*
@@ -1158,6 +1158,9 @@ ReflectInput(
 		    /* The drain delivered nothing */
 		    return gotBytes;
 		}
+
+		/* Reset eof, force caller to drain result buffer */
+                ((Channel*) rtPtr->parent)->state->flags &= ~CHANNEL_EOF;
 		continue; /* at: while (toRead > 0) */
 	    }
 	} /* read == 0 */
